traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()) {
  ^